fixed layout break on iphone 5

--- a/app/assets/css/_layout.sass
+++ b/app/assets/css/_layout.sass
@@ -217,9 +217,10 @@ aside
   padding: 7px 5px
   @media screen and (max-width: 1020px)
     position: absolute
-    right: -100%
+    right: -120%
     top: 0
     width: 330px
+    max-width: 100%
     z-index: 1002
     background: #fff
     transition: 0.3s
